--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&display=swap" rel="stylesheet">
+
+      
+  <!-- === THIS IS WHERE YOU PASTE THE GOOGLE CODE === -->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-579HGYJYLC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-579HGYJYLC');
+  </script>
     
     <!-- Google Analytics Script (with your ID) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-579HGYJYLC"></script>
